test: add comprehensive unit and integration tests for VASQ, SpectorIndex, HNSW, concurrency, and semantic search